--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+body{
+    padding: 20px 50px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #444;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1,h2,h3,h4{
+    color: #444;
+    margin: 10px 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+p{
+    margin: 6px 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+a{
+    text-decoration: none;
+    color: grey;
+    display: inline-block;
+    margin: 4px 0;
+    transition: 300ms;
+}
+a:hover{
+    color: #444;
 }
 
-.App-link {
-  color: #61dafb;
+.HomeBtn{
+    color: #fff;
+    background-color: #444;
+    padding: 5px 15px;
+    border-radius: 2px;
+    display: block;
+    width: 50px;
+    text-align: center;
+    transition: 300ms;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.HomeBtn:hover{
+    color: cyan;
 }
